# controllers/auth.js
@@ -1,7 +1,0 @@
-function isAuthenticated(res) {
-  res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out')
-}
-
-module.exports = {
-  isAuthenticated,
-}
