# routes/auth.js
@@ -1,6 +1,0 @@
-const router = require('express').Router()
-const { isAuthenticated } = require('../controllers/auth')
-
-router.get('/', isAuthenticated)
-
-module.exports = router
