# routes/index.js
@@ -1,9 +1,9 @@
 const express = require('express')
+const { requiresAuth } = require('express-openid-connect')
 const router = express.Router()
 
 router.use('/', require('./swagger'))
-router.use('/auth', require('./auth'))
-router.use('/chores', require('./chores'))
+router.use('/chores', requiresAuth(), require('./chores'))
 router.use('/collections', require('./choreCollections'))
 router.use('/profile', require('./profile'))
 router.use('/users', require('./users'))
